alignment issues

--- a/public/assets/css/app_new2.css
+++ b/public/assets/css/app_new2.css
@@ -1920,6 +1920,7 @@ margin-left:5px;
 
 .deal-listing .experience-grid li {
 max-width:400px;
+max-height:400px;
 margin:0 auto 20px;
 }
 
